@@ -59,7 +59,11 @@ from bzrlib import(
     symbol_versioning,
     )
 import bzrlib.errors as errors
-from bzrlib.symbol_versioning import deprecated_method, zero_eleven
+from bzrlib.symbol_versioning import(
+    deprecated_method,
+    zero_eleven,
+    zero_seventeen,
+    )
 from bzrlib.trace import mutter
 from bzrlib.tsort import(
     merge_sort,
@@ -210,22 +214,28 @@ def _show_log(branch,
         mainline_revs.insert(0, None)
     else:
         mainline_revs.insert(0, which_revs[start_revision-2][1])
-    # how should we show merged revisions ?
-    # old api: show_merge. New api: show_merge_revno
-    show_merge_revno = getattr(lf, 'show_merge_revno', None)
-    show_merge = getattr(lf, 'show_merge', None)
-    if show_merge is None and show_merge_revno is None:
-        # no merged-revno support
-        include_merges = False
-    else:
-        include_merges = True
-    if show_merge is not None and show_merge_revno is None:
+    legacy_lf = not getattr(lf,'log_revision',None)
+    if legacy_lf:
+        # pre-0.17 formatters use show for mainline revisions.
+        # how should we show merged revisions ?
+        #   pre-0.11 api: show_merge
+        #   0.11-0.16 api: show_merge_revno
+        show_merge_revno = getattr(lf, 'show_merge_revno', None)
+        show_merge = getattr(lf, 'show_merge', None)
+        if show_merge is None and show_merge_revno is None:
+            # no merged-revno support
+            generate_merge_revisions = False
+        else:
+            generate_merge_revisions = True
         # tell developers to update their code
-        symbol_versioning.warn('LogFormatters should provide show_merge_revno '
-            'instead of show_merge since bzr 0.11.',
+        symbol_versioning.warn('LogFormatters should provide log_revision '
+            'instead of show and show_merge_revno since bzr 0.17.',
             DeprecationWarning, stacklevel=3)
+    else:
+        generate_merge_revisions = getattr(lf, 'supports_merge_revisions', 
+                                           False)
     view_revs_iter = get_view_revisions(mainline_revs, rev_nos, branch,
-                          direction, include_merges=include_merges)
+                          direction, include_merges=generate_merge_revisions)
     if specific_fileid:
         view_revisions = _get_revisions_touching_file_id(branch,
                                                          specific_fileid,
@@ -234,11 +244,13 @@ def _show_log(branch,
     else:
         view_revisions = list(view_revs_iter)
 
-    use_tags = getattr(lf, 'supports_tags', False)
-    if use_tags:
-        rev_tag_dict = {}
+    rev_tag_dict = {}
+    generate_tags = getattr(lf, 'supports_tags', False)
+    if generate_tags:
         if branch.supports_tags():
             rev_tag_dict = branch.tags.get_reverse_tag_dict()
+
+    generate_delta = verbose and getattr(lf, 'supports_delta', False)
 
     def iter_revisions():
         # r = revision, n = revno, d = merge depth
@@ -249,7 +261,7 @@ def _show_log(branch,
         while revision_ids:
             cur_deltas = {}
             revisions = repository.get_revisions(revision_ids[:num])
-            if verbose:
+            if generate_delta:
                 delta_revisions = [r for r in revisions if
                                    r.revision_id in zeros]
                 deltas = repository.get_deltas_for_revisions(delta_revisions)
@@ -262,7 +274,10 @@ def _show_log(branch,
                 yield revision, cur_deltas.get(revision.revision_id)
             revision_ids  = revision_ids[num:]
             num = min(int(num * 1.5), 200)
-            
+
+    if getattr(lf, 'begin_log', None):
+        lf.begin_log()
+
     # now we just print all the revisions
     for ((rev_id, revno, merge_depth), (rev, delta)) in \
          izip(view_revisions, iter_revisions()):
@@ -271,20 +286,28 @@ def _show_log(branch,
             if not searchRE.search(rev.message):
                 continue
 
-        if merge_depth == 0:
-            if use_tags:
-                lf.show(revno, rev, delta, rev_tag_dict.get(rev_id))
-            else:
-                lf.show(revno, rev, delta)
+        if not legacy_lf:
+            lr = LogRevision(rev,revno,merge_depth,delta,rev_tag_dict.get(rev_id))
+            lf.log_revision(lr)
         else:
-            if show_merge_revno is None:
-                lf.show_merge(rev, merge_depth)
-            else:
-                if use_tags:
-                    lf.show_merge_revno(rev, merge_depth, revno,
-                                        rev_tag_dict.get(rev_id))
+            # support for legacy (pre-0.17) LogFormatters
+            if merge_depth == 0:
+                if generate_tags:
+                    lf.show(revno, rev, delta, rev_tag_dict.get(rev_id))
                 else:
-                    lf.show_merge_revno(rev, merge_depth, revno)
+                    lf.show(revno, rev, delta)
+            else:
+                if show_merge_revno is None:
+                    lf.show_merge(rev, merge_depth)
+                else:
+                    if generate_tags:
+                        lf.show_merge_revno(rev, merge_depth, revno,
+                                            rev_tag_dict.get(rev_id))
+                    else:
+                        lf.show_merge_revno(rev, merge_depth, revno)
+
+    if getattr(lf, 'end_log', None):
+        lf.end_log()
 
 
 def _get_revisions_touching_file_id(branch, file_id, mainline_revisions,
@@ -398,14 +421,58 @@ def reverse_by_depth(merge_sorted_revisions, _depth=0):
     return result
 
 
+class LogRevision(object):
+    """A revision to be logged (by LogFormatter.log_revision).
+
+    A simple wrapper for the attributes of a revision to be logged.
+    The attributes may or may not be populated, as determined by the 
+    logging options and the log formatter capabilities.
+    """
+
+    def __init__(self,rev=None,revno=None,merge_depth=0,delta=None,tags=None):
+        self.rev = rev
+        self.revno = revno
+        self.merge_depth = merge_depth
+        self.delta = delta
+        self.tags = tags
+
+
 class LogFormatter(object):
-    """Abstract class to display log messages."""
+    """Abstract class to display log messages.
+
+    At a minimum, a derived class must implement the log_revision method.
+
+    If the LogFormatter needs to be informed of the beginning or end of
+    a log it should implement the begin_log and/or end_log hook methods.
+
+    A LogFormatter should define the following supports_XXX flags 
+    to indicate which LogRevision attributes it supports:
+
+    - supports_delta must be True if this log formatter supports delta.
+        Otherwise the delta attribute may not be populated.
+    - supports_merge_revisions must be True if this log formatter supports 
+        merge revisions.  If not, only revisions mainline revisions (those 
+        with merge_depth == 0) will be passed to the formatter.
+    - supports_tags must be True if this log formatter supports tags.
+        Otherwise the tags attribute may not be populated.
+    """
 
     def __init__(self, to_file, show_ids=False, show_timezone='original'):
         self.to_file = to_file
         self.show_ids = show_ids
         self.show_timezone = show_timezone
 
+# TODO: uncomment this block after show() has been removed.
+# Until then defining log_revision would prevent _show_log calling show() 
+# in legacy formatters.
+#    def log_revision(self, revision):
+#        """Log a revision.
+#
+#        :param  revision:   The LogRevision to be logged.
+#        """
+#        raise NotImplementedError('not implemented in abstract base')
+
+    @deprecated_method(zero_seventeen)
     def show(self, revno, rev, delta):
         raise NotImplementedError('not implemented in abstract base')
 
@@ -415,92 +482,108 @@ class LogFormatter(object):
 
 class LongLogFormatter(LogFormatter):
 
-    supports_tags = True    # must exist and be True
-                            # if this log formatter support tags.
-                            # .show() and .show_merge_revno() must then accept
-                            # the 'tags'-argument with list of tags
+    supports_merge_revisions = True
+    supports_delta = True
+    supports_tags = True
 
+    @deprecated_method(zero_seventeen)
     def show(self, revno, rev, delta, tags=None):
-        return self._show_helper(revno=revno, rev=rev, delta=delta, tags=tags)
+        lr = LogRevision(rev,revno,0,delta,tags)
+        return self.log_revision(lr)
 
     @deprecated_method(zero_eleven)
     def show_merge(self, rev, merge_depth):
-        return self._show_helper(rev=rev, indent='    '*merge_depth,
-                                 merged=True, delta=None)
+        lr = LogRevision(rev,merge_depth=merge_depth)
+        return self.log_revision(lr)
 
+    @deprecated_method(zero_seventeen)
     def show_merge_revno(self, rev, merge_depth, revno, tags=None):
         """Show a merged revision rev, with merge_depth and a revno."""
-        return self._show_helper(rev=rev, revno=revno,
-            indent='    '*merge_depth, merged=True, delta=None, tags=tags)
+        lr = LogRevision(rev,revno,merge_depth,tags=tags)
+        return self.log_revision(lr)
 
-    def _show_helper(self, rev=None, revno=None, indent='', merged=False,
-                     delta=None, tags=None):
-        """Show a revision, either merged or not."""
+    def log_revision(self, revision):
+        """Log a revision, either merged or not."""
         from bzrlib.osutils import format_date
+        indent = '    '*revision.merge_depth
         to_file = self.to_file
         print >>to_file,  indent+'-' * 60
-        if revno is not None:
-            print >>to_file,  indent+'revno:', revno
-        if tags:
-            print >>to_file, indent+'tags: %s' % (', '.join(tags))
-        if merged:
-            print >>to_file,  indent+'merged:', rev.revision_id
-        elif self.show_ids:
-            print >>to_file,  indent+'revision-id:', rev.revision_id
+        if revision.revno is not None:
+            print >>to_file,  indent+'revno:', revision.revno
+        if revision.tags:
+            print >>to_file, indent+'tags: %s' % (', '.join(revision.tags))
         if self.show_ids:
-            for parent_id in rev.parent_ids:
+            print >>to_file,  indent+'revision-id:', revision.rev.revision_id
+            for parent_id in revision.rev.parent_ids:
                 print >>to_file, indent+'parent:', parent_id
-        print >>to_file,  indent+'committer:', rev.committer
+        print >>to_file,  indent+'committer:', revision.rev.committer
 
         try:
             print >>to_file, indent+'branch nick: %s' % \
-                rev.properties['branch-nick']
+                revision.rev.properties['branch-nick']
         except KeyError:
             pass
-        date_str = format_date(rev.timestamp,
-                               rev.timezone or 0,
+        date_str = format_date(revision.rev.timestamp,
+                               revision.rev.timezone or 0,
                                self.show_timezone)
         print >>to_file,  indent+'timestamp: %s' % date_str
 
         print >>to_file,  indent+'message:'
-        if not rev.message:
+        if not revision.rev.message:
             print >>to_file,  indent+'  (no message)'
         else:
-            message = rev.message.rstrip('\r\n')
+            message = revision.rev.message.rstrip('\r\n')
             for l in message.split('\n'):
                 print >>to_file,  indent+'  ' + l
-        if delta is not None:
-            delta.show(to_file, self.show_ids)
+        if revision.delta is not None:
+            revision.delta.show(to_file, self.show_ids)
 
 
 class ShortLogFormatter(LogFormatter):
+
+    supports_delta = True
+
+    @deprecated_method(zero_seventeen)
     def show(self, revno, rev, delta):
+        lr = LogRevision(rev,revno,0,delta)
+        return self.log_revision(lr)
+
+    def log_revision(self, revision):
         from bzrlib.osutils import format_date
 
         to_file = self.to_file
-        date_str = format_date(rev.timestamp, rev.timezone or 0,
-                            self.show_timezone)
-        print >>to_file, "%5s %s\t%s" % (revno, self.short_committer(rev),
-                format_date(rev.timestamp, rev.timezone or 0,
+        date_str = format_date(revision.rev.timestamp, 
+                               revision.rev.timezone or 0,
+                               self.show_timezone)
+        print >>to_file, "%5s %s\t%s" % (revision.revno, 
+                self.short_committer(revision.rev),
+                format_date(revision.rev.timestamp, 
+                            revision.rev.timezone or 0,
                             self.show_timezone, date_fmt="%Y-%m-%d",
-                           show_offset=False))
+                            show_offset=False))
         if self.show_ids:
-            print >>to_file,  '      revision-id:', rev.revision_id
-        if not rev.message:
+            print >>to_file,  '      revision-id:', revision.rev.revision_id
+        if not revision.rev.message:
             print >>to_file,  '      (no message)'
         else:
-            message = rev.message.rstrip('\r\n')
+            message = revision.rev.message.rstrip('\r\n')
             for l in message.split('\n'):
                 print >>to_file,  '      ' + l
 
         # TODO: Why not show the modified files in a shorter form as
         # well? rewrap them single lines of appropriate length
-        if delta is not None:
-            delta.show(to_file, self.show_ids)
+        if revision.delta is not None:
+            revision.delta.show(to_file, self.show_ids)
         print >>to_file, ''
 
 
 class LineLogFormatter(LogFormatter):
+
+    def __init__(self, *args, **kwargs):
+        from bzrlib.osutils import terminal_width
+        super(LineLogFormatter, self).__init__(*args, **kwargs)
+        self._max_chars = terminal_width() - 1
+
     def truncate(self, str, max_len):
         if len(str) <= max_len:
             return str
@@ -518,9 +601,14 @@ class LineLogFormatter(LogFormatter):
         else:
             return rev.message
 
+    @deprecated_method(zero_seventeen)
     def show(self, revno, rev, delta):
         from bzrlib.osutils import terminal_width
         print >> self.to_file, self.log_string(revno, rev, terminal_width()-1)
+
+    def log_revision(self, revision):
+        print >> self.to_file, self.log_string(revision.revno, revision.rev, 
+                                               self._max_chars)
 
     def log_string(self, revno, rev, max_chars):
         """Format log info into one string. Truncate tail of string
